--- a/index.html
+++ b/index.html
@@ -27,30 +27,98 @@
         </ul>
       </header>
       <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h1>
+<a id="learn-vim" class="anchor" href="#learn-vim" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>learn-vim</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>以我个人学习 vim 的经验来看，通过看文档或看其他人操作其实是很难真正学会 vim 的，你必须在实际
+应用中，进入真实场景才能逐渐熟悉并掌握相关命令。</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>因此，为了同时满足学习和操作的需求，项目中的文件都采用了 Markdown 格式，即可以当作说明文档来
+阅读，也可以用 vim 打开文件进行实际操作（建议采用后者）。</p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="如何使用" class="anchor" href="#%E5%A6%82%E4%BD%95%E4%BD%BF%E7%94%A8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>如何使用</h3>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<ol>
+<li>进入控制台</li>
+<li>clone 项目到本地</li>
+<li>进入项目文件夹</li>
+<li>执行命令 <code>vim file-one.md</code>
+</li>
+</ol>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="排版规范" class="anchor" href="#%E6%8E%92%E7%89%88%E8%A7%84%E8%8C%83" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>排版规范</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<div class="highlight highlight-source-gfm"><pre><span class="pl-mh"><span class="pl-mh">###</span><span class="pl-mh"> </span>大标题表示一大类</span>
+
+<span class="pl-mh"><span class="pl-mh">####</span><span class="pl-mh"> </span>小标题表示该大类下的小分类</span>
+
+没有任何格式的文本为正常描述，只有阅读功能。
+
+<span class="pl-c"><span class="pl-c1">&gt;</span> 嵌入到引用块中的文本为操作指示，你可以按照里面提到的内容进行操作</span>
+<span class="pl-c"><span class="pl-c"><span class="pl-c1">&gt;</span></span></span>
+<span class="pl-c"><span class="pl-c"><span class="pl-c"><span class="pl-c1">&gt;</span> 同时操作符或命令会包含在类似 <span class="pl-c1">`:w`</span> 的符号中</span></span></span>
+<span class="pl-c"><span class="pl-c"><span class="pl-c"></span></span></span>
+命令中形如 f&lt;X&gt; 中的 &lt; 和 &gt; 不需要打出来，&lt;X&gt; 代表一个变量，即你可以打 fa 或 fb 亦或 fC
+
+<span class="pl-mi">_注意：命令区分大小写（需要注意的事项会出现在当前行这样的符号中）_</span></pre></div>
+
+<h3>
+<a id="导航" class="anchor" href="#%E5%AF%BC%E8%88%AA" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>导航</h3>
+
+<ol>
+<li><a href="file-one.md">光标的移动</a></li>
+<li><a href="file-two.md">打开文件、查找内容</a></li>
+<li><a href="file-three.md">文档的修改与保存</a></li>
+<li><a href="file-four.md">一些小技巧</a></li>
+<li><a href="file-five.md">分屏与标签页</a></li>
+<li><a href="file-six.md">块操作</a></li>
+<li><a href="file-seven.md">vim 中的宏</a></li>
+</ol>
+
+<h3>
+<a id="tips" class="anchor" href="#tips" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tips</h3>
+
+<ul>
+<li>教程中会有下一章或相关章节的导航，定位到文件名执行 <code>gf</code> 就可以打开相关文件</li>
+<li>你可以随时打开相关章节查看，然后用 <code>:bp</code> 回到之前的文件（该命令会在<a href="file-two.md">第二章</a>中讲到）</li>
+<li>当你用 <code>:q</code> 或 <code>:qa</code> 退出教程时可能会收到文件未保存的错误提醒，试试在命令后面加上 <code>!</code>
+</li>
+</ul>
+
+<h3>
+<a id="todo" class="anchor" href="#todo" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>TODO</h3>
+
+<ul>
+<li>vimdiff</li>
+<li>more settings</li>
+<li>other mode</li>
+<li>plugins</li>
+</ul>
+
+<h3>
+<a id="推荐另外几个出色的-vim-教程" class="anchor" href="#%E6%8E%A8%E8%8D%90%E5%8F%A6%E5%A4%96%E5%87%A0%E4%B8%AA%E5%87%BA%E8%89%B2%E7%9A%84-vim-%E6%95%99%E7%A8%8B" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>推荐另外几个出色的 vim 教程</h3>
+
+<ul>
+<li>控制台运行 <code>vimtutor</code> 这是 vim 官方实操教程</li>
+<li>
+<a href="http://coolshell.cn/articles/5426.html">简明 Vim 练级攻略</a> 很不错的入门教程</li>
+<li>
+<a href="https://github.com/mhinz/vim-galore">vim galore</a> 更新频繁，vim 进阶必读</li>
+<li>
+<a href="http://liuzhijun.iteye.com/category/270228">每日一Vim</a> 共 30 篇，内容比较全</li>
+</ul>
+
+<h4>
+<a id="cheatsheets" class="anchor" href="#cheatsheets" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Cheatsheets</h4>
+
+<ul>
+<li><a href="http://www.nathael.org/Data/vi-vim-cheat-sheet.svg">http://www.nathael.org/Data/vi-vim-cheat-sheet.svg</a></li>
+<li><a href="http://people.csail.mit.edu/vgod/vim/vim-cheat-sheet-en.png">http://people.csail.mit.edu/vgod/vim/vim-cheat-sheet-en.png</a></li>
+<li><a href="https://cdn.shopify.com/s/files/1/0165/4168/files/preview.png">https://cdn.shopify.com/s/files/1/0165/4168/files/preview.png</a></li>
+<li><a href="http://michael.peopleofhonoronly.com/vim/vim_cheat_sheet_for_programmers_screen.png">http://michael.peopleofhonoronly.com/vim/vim_cheat_sheet_for_programmers_screen.png</a></li>
+</ul>
       </section>
     </div>
     <footer>
